--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -58,13 +58,6 @@ dimnames(foo) <- list(paste0("ageClass",1:8), c("F","M"))
 return(foo[,c("M","F")])
 }
 
-reformatData2 <- function(data){
-foo <- matrix(unlist(data), nrow = 7, ncol = 2)
-foo <- rbind( c(0.1, 0.1), foo)
-dimnames(foo) <- list(paste0("ageClass",1:8), c("F","M"))
-return(foo[,c("M","F")])
-}
-
 ```
 
 #### Read Two of the Four NHTS Data Tables
@@ -471,7 +464,7 @@ for( muNonTravel in seq(1,75,length.out = 3) ){
 DALYsTotal <- readRDS(file = "./data/DALYsTotal.rds")
 }
 p <- ggplot(DALYsTotal, aes(x = muNonTravel, y = DALY, colour = HHS))
-p  + geom_line() + theme_bw() + scale_x_discrete(name="Non-Travel METs mean") + scale_y_continuous(name="Change in DALY (National)") + facet_grid(. ~ HHS)
+p  + geom_line() + theme_bw() + scale_x_continuous(name="Non-Travel METs mean") + scale_y_continuous(name="Change in DALY (National)") + facet_grid(. ~ HHS)
 ```
 
 ### Visualization of trip time matrices
