Added symbolic link to manuscript/figures/

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -101,6 +101,9 @@ scenario.
 
 \section{Regional Example}
 
+
+
+
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -121,7 +124,7 @@ ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
 
 \begin{figure}[t]
-    \centerline{\includegraphics[width=0.4\textwidth]{./figures/hhsmap}}\centerline{\includegraphics[width=0.4\textwidth]{./figures/ITHIMObjs-2}}
+    \centerline{\includegraphics[width=0.4\textwidth]{./figures/hhsmap}}\centerline{\includegraphics[width=0.4\textwidth]{./figures/fig2}}
     \caption{Change in total national DALYs for each regional transportation
 estimates.
 }\label{dalyFigure}
