--- a/manuscript/ITHIM.bib
+++ b/manuscript/ITHIM.bib
@@ -9,4 +9,16 @@ year = {2013},
 number = {1}
 }
 
+@Article{maizlish2013,
+author = {Maizlish, N. and Woodcock, J. and Co, S. and Ostro, B. and Fanai, A. and Farley, D.},
+title = {Health cobenefits and transportation-related
+reductions in greenhouse gas emissions in the San Francisco Bay
+area.},
+journal = {American Journal of Public Health},
+volume = {103},
+year = {2013},
+number = {4},
+pages = {703-709}
+}
+
 
